fixed div alignment with bottom of page even further

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -4,12 +4,11 @@ html {
   position: relative;
   height: auto;
   margin-top: 40px;
-  margin-bottom: 80px;
+  margin-bottom: 50px;
 }
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 65px;
   height: auto;
 }
 
