--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -8,6 +8,7 @@ body {
   height: 25px;
   margin-top: 15px;
   width: 100%;
+  margin-bottom: -10px;
 }
 
 #carousel-image {
